--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "emotion-theming": "^10.0.27",
+    "firebase": "^7.22.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
